--- a/styling/gallerystyling.css
+++ b/styling/gallerystyling.css
@@ -21,11 +21,26 @@
 }
 
 /* Next & previous buttons */
-.prev,
+.prev {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  left: 5%; /* testing alignment */
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
 .next {
   cursor: pointer;
   position: absolute;
   top: 40%;
+  right: 5%; /* testing alignment */
   width: auto;
   padding: 16px;
   margin-top: -50px;
