--- a/styling/gallerystyling.css
+++ b/styling/gallerystyling.css
@@ -40,7 +40,7 @@
   cursor: pointer;
   position: absolute;
   top: 40%;
-  right: 5%; /* testing alignment */
+  left: 95%; /* testing alignment */
   width: auto;
   padding: 16px;
   margin-top: -50px;
