--- a/styling/gallerystyling.css
+++ b/styling/gallerystyling.css
@@ -93,7 +93,7 @@
   float: left;
   width: 235px;
   height: 235px;
-  /*width: 16.66%;*/
+  width: 25%;
 }
 
 /* Add a transparency effect for thumnbail images */
