--- a/styling/webflow.css
+++ b/styling/webflow.css
@@ -318,7 +318,7 @@ a {
   display: flex;
   width: 100%;
   height: 144px;
-  max-height: 124px;
+  /*max-height: 124px;*/
   max-width: 100%;
   min-height: 56px;
   margin-bottom: 20px;
